# enterprise-application-manager

./: .gitignore  README.md  cleanup-dev.sh  cleanup.sh  docker-compose.yml  package.json  setup-dev.sh  vite.config.ts
backend/: .env.example  .gitignore  TESTING.md  pyproject.toml  requirements.txt  run_tests.py  setup_rbac.py
backend/app_tracker/: asgi.py  settings.py  urls.py  wsgi.py
backend/app_tracker/core/: admin.py  apps.py  models.py  serializers.py  views.py
backend/app_tracker/management/commands/: runserver.py
backend/apps/: __init__.py
backend/apps/documentation/: __init__.py  apps.py  urls.py  views.py
backend/apps/documentation/templates/documentation/: access_denied.html
backend/apps/inventory/: __init__.py  admin.py  apps.py  audit.py  audit_signals.py  middleware.py  models.py  permissions.py  serializers.py  test_api.py  test_audit.py  test_documentation.py  test_models.py  tests.py  urls.py  user_serializers.py  user_views.py  views.py
backend/apps/inventory/management/commands/: create_sample_data.py  test_audit_logging.py  update_documentation_access.py
backend/apps/inventory/migrations/: 0001_initial.py  0002_application_system_manager_notes_and_more.py  0003_userprofile_has_documentation_access.py  0004_alter_applicationdatastoredependency_options_and_more.py
docker/: Dockerfile  entrypoint.sh
docs/: audit-logging.md  conf.py  introduction.rst  testing.md
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.cjs  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
(+102 files in other folders)
